MTM-35410 Fixed background issue when closing sidebar on mobile

--- a/themes/c8ydocs/assets/scss/_main-content.scss
+++ b/themes/c8ydocs/assets/scss/_main-content.scss
@@ -1,8 +1,10 @@
 .main-footer{
-  transition: transform .30s $ease;
+  -webkit-transition: transform .30s $ease;
   @media(max-width: $grid-breakpoint - 1 ){
     .open &{
-      transform:translateX(240px);
+      -webkit-backface-visibility: hidden;
+      -webkit-transform: translateX(240px);
+      -webkit-transform: translateY(0);
     }
   }
   @media(min-width: $grid-breakpoint) {
@@ -22,10 +24,13 @@
   border-radius: 16px;
   background-color: white;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.01), 0 8px 8px rgba(0, 0, 0, 0.01), 0 16px 16px rgba(0, 0, 0, 0.03), 0 32px 32px rgba(0, 0, 0, 0.05), 0 32px 64px rgba(0, 0, 0, .1), 0 -3px 32px rgba(0, 0, 0, 0.1);
-  transition: transform .30s $ease, filter .30s $ease;
+  -webkit-transition: transform .30s $ease, filter .30s $ease;
   @media(max-width: $grid-breakpoint - 1 ){
     .open &{
-      transform:translateX(240px);
+      transform: translateX(240px);
+      transform: translateY(0);
+      -webkit-transform: translateX(240px);
+      -webkit-transform: translateY(0);
       filter: blur(3px);
     }
   }
